# ogt-paramctl

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: probe-station-setup.md
docs/decisions/: 0001-license-version.md  0002-photo-iv-campaign.md
examples/scripts/: connect_and_idn.py
src/paramctl/: __main__.py
src/paramctl/driver/: __init__.py  base.py  discovery.py  flex.py  flex_protocol.py  mock.py  synth.py
src/paramctl/engine/: __init__.py  campaign.py  events.py  runner.py
src/paramctl/light/: __init__.py  base.py  mock.py  pxi.py
src/paramctl/models/: __init__.py  campaign.py  channel.py  illumination.py  measurement.py  results.py  setup.py
src/paramctl/persistence/: __init__.py  data.py  photoiv.py  setups.py
src/paramctl/ui/: __init__.py  app.py  main_window.py  photoiv_app.py  photoiv_window.py  photoiv_workers.py  workers.py
src/paramctl/ui/widgets/: __init__.py  _float_edit.py  _si_float_edit.py  channel_panel.py  plot_view.py  setup_editor.py  sweep_panel.py
src/paramctl/util/: __init__.py  units.py
tests/: conftest.py
tests/hardware/: test_flex_idn.py
tests/integration/: test_campaign_mock.py  test_main_window.py  test_main_window_persistence.py  test_main_window_qol.py  test_photoiv_window.py  test_sweep_against_mock.py
tests/unit/: test_campaign_model.py  test_compliance_flag.py  test_driver_base.py  test_driver_mock.py  test_driver_synth.py  test_engine_runner.py  test_flex_protocol.py  test_illumination.py  test_light_mock.py  test_mock_measurement.py  test_models_channel.py  test_models_measurement.py  test_models_setup.py  test_persistence_data.py  test_persistence_setups.py  test_photoiv_app.py  test_photoiv_storage.py  test_ui_dynamic_units.py  test_ui_plot_view.py  test_ui_setup_editor.py  test_ui_si_float_edit.py  test_ui_workers.py  test_util_units.py
