[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paramctl"
version = "0.0.0"
description = "Python desktop control for Keysight 4155/4156 Semiconductor Parameter Analyzers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Lukas Crockett", email = "lukas.crockett@gmail.com" },
]
keywords = [
    "keysight",
    "agilent",
    "4155",
    "4156",
    "semiconductor",
    "parameter-analyzer",
    "smu",
    "pyvisa",
    "gpib",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

dependencies = [
    "PyVISA==1.14.1",
    "pyvisa-py==0.7.2",
    "PyQt6==6.7.1",
    "pyqtgraph==0.13.7",
    "matplotlib==3.9.2",
    "pydantic==2.9.2",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-qt==4.4.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paramctl"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CLAUDE.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow assert False in tests

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pyvisa.*",
    "pyvisa_py.*",
    "pyqtgraph.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "hardware: requires a real instrument and GPIB adapter (skipped by default in CI)",
]
qt_api = "pyqt6"
